syntax = "proto3";

package ticket;

service TicketService{
    rpc GetTicket(GetTicketRequest) returns (GetTicketResponse);
}

enum Points{
    TCP = 0;
    UDP = 1;
    WEB_RTC = 2;
    WEB_SOCKET = 3;
    // others...
}

message GetTicketRequest{
    Points point = 1;
    int32 user_id = 2;
}

message GetTicketResponse{
    string token = 1;
}